--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello
+	<!DOCTYPE html>
+	<html>
+		<head>
+			<title>Pa Ramyarupa</title>
+			<link rel="stylesheet" href="styles.css">
+		</head>
+		<body>
+
+			<img class="headshot1" src="headshot1.jpg" style=>
+			
+			<p>Hello! I'm Pa.  I'm from Bangkok, Thailand,<br> but I am currently studying at Barnard College <br> in the United States. I am a first-year student, <br> and will potentially be studying architecture.
+			</p> 
+
+			<form>
+  			  	Leave your e-mail here: <input type="text" name="usrname"><br>
+  				<input type="submit" value="Submit">
+			</form>
+			<br>
+			<a rel"=resumesheet" href="index resume.html">Resume</a>
+			<br>
+			<br>
+			<a rel="gallerysheet" href="gallery.html">Gallery</a>
+		</body>
+
+	</html>
